--- a/index.html
+++ b/index.html
@@ -28,35 +28,35 @@
       </header>
       <section>
         <p>//**********************************************************
-// FUNDAMENTOS DE ANÁLISIS Y DISEÑO DE ALGORITMOS
-// MINIPROYECTO 1: SOLUCIÓN PARA UN JUEGO DE LÓGICA: AKARI
-//
-// PROYECTO DE SOFTWARE EN JAVA (JDK1.6)
-// USANDO IDE: NetBeans
-//
-// WEB PAGE:
-//
-// FECHA INICIACION: 9 de Mayo de 2012
-//
-// AUTORES:
-//     Marx Arturo Arias - 0840247-3743
-//     <a href="mailto:marxarturoariasescobar@gmail.com">marxarturoariasescobar@gmail.com</a>
-//
-//     Luis Jeferson Gallardo - 
-//     <a href="mailto:luisjhefeerson@gmail.com">luisjhefeerson@gmail.com</a>
-//
-//     Fidel Herney Palacios - 0832691-3743
-//     <a href="mailto:herney400@gmail.com">herney400@gmail.com</a>
-//
-//     James Andrés Payan - 0957150-2711
-//     <a href="mailto:jamespayan@gmail.com">jamespayan@gmail.com</a>
-//
-//     Gustavo Adolfo Rodriguez - 0932979-3743<br>
-//     <a href="mailto:gustalibreros@gmail.com">gustalibreros@gmail.com</a>
-//
-// ESCUELA DE INGENIERIA DE SISTEMAS Y COMPUTACION
-// UNIVERSIDAD DEL VALLE
-//**********************************************************</p>
+<br>// FUNDAMENTOS DE ANÁLISIS Y DISEÑO DE ALGORITMOS
+<br>// MINIPROYECTO 1: SOLUCIÓN PARA UN JUEGO DE LÓGICA: AKARI
+<br>//
+<br>// PROYECTO DE SOFTWARE EN JAVA (JDK1.6)
+<br>// USANDO IDE: NetBeans
+<br>//
+<br>// WEB PAGE:
+<br>//
+<br>// FECHA INICIACION: 9 de Mayo de 2012
+<br>//
+<br>// AUTORES:
+<br>//     Marx Arturo Arias - 0840247-3743
+<br>//     <a href="mailto:marxarturoariasescobar@gmail.com">marxarturoariasescobar@gmail.com</a>
+<br>//
+<br>//     Luis Jeferson Gallardo - 
+<br>//     <a href="mailto:luisjhefeerson@gmail.com">luisjhefeerson@gmail.com</a>
+<br>//
+<br>//     Fidel Herney Palacios - 0832691-3743
+<br>//     <a href="mailto:herney400@gmail.com">herney400@gmail.com</a>
+<br>//
+<br>//     James Andrés Payan - 0957150-2711
+<br>//     <a href="mailto:jamespayan@gmail.com">jamespayan@gmail.com</a>
+<br>//
+<br>//     Gustavo Adolfo Rodriguez - 0932979-3743<br>
+<br>//     <a href="mailto:gustalibreros@gmail.com">gustalibreros@gmail.com</a>
+<br>//
+<br>// ESCUELA DE INGENIERIA DE SISTEMAS Y COMPUTACION
+<br>// UNIVERSIDAD DEL VALLE
+<br>//**********************************************************</p>
       </section>
     </div>
     <footer>
