--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <br>//     James Andrés Payan - 0957150-2711
 <br>//     <a href="mailto:jamespayan@gmail.com">jamespayan@gmail.com</a>
 <br>//
-<br>//     Gustavo Adolfo Rodriguez - 0932979-3743<br>
+<br>//     Gustavo Adolfo Rodriguez - 0932979-3743
 <br>//     <a href="mailto:gustalibreros@gmail.com">gustalibreros@gmail.com</a>
 <br>//
 <br>// ESCUELA DE INGENIERIA DE SISTEMAS Y COMPUTACION
