--- a/index.html
+++ b/index.html
@@ -27,36 +27,34 @@
         </ul>
       </header>
       <section>
-        <p>//**********************************************************
-<br>// FUNDAMENTOS DE ANÁLISIS Y DISEÑO DE ALGORITMOS
-<br>// MINIPROYECTO 1: SOLUCIÓN PARA UN JUEGO DE LÓGICA: AKARI
-<br>//
-<br>// PROYECTO DE SOFTWARE EN JAVA (JDK1.6)
-<br>// USANDO IDE: NetBeans
-<br>//
-<br>// WEB PAGE:
-<br>//
-<br>// FECHA INICIACION: 9 de Mayo de 2012
-<br>//
-<br>// AUTORES:
-<br>//     Marx Arturo Arias - 0840247-3743
-<br>//     <a href="mailto:marxarturoariasescobar@gmail.com">marxarturoariasescobar@gmail.com</a>
-<br>//
-<br>//     Luis Jeferson Gallardo - 
-<br>//     <a href="mailto:luisjhefeerson@gmail.com">luisjhefeerson@gmail.com</a>
-<br>//
-<br>//     Fidel Herney Palacios - 0832691-3743
-<br>//     <a href="mailto:herney400@gmail.com">herney400@gmail.com</a>
-<br>//
-<br>//     James Andrés Payan - 0957150-2711
-<br>//     <a href="mailto:jamespayan@gmail.com">jamespayan@gmail.com</a>
-<br>//
-<br>//     Gustavo Adolfo Rodriguez - 0932979-3743
-<br>//     <a href="mailto:gustalibreros@gmail.com">gustalibreros@gmail.com</a>
-<br>//
-<br>// ESCUELA DE INGENIERIA DE SISTEMAS Y COMPUTACION
-<br>// UNIVERSIDAD DEL VALLE
-<br>//**********************************************************</p>
+        <p>
+<br> FUNDAMENTOS DE ANÁLISIS Y DISEÑO DE ALGORITMOS
+<br> MINIPROYECTO 1: SOLUCIÓN PARA UN JUEGO DE LÓGICA: AKARI
+<br>
+<br> PROYECTO DE SOFTWARE EN JAVA (JDK1.6)
+<br> USANDO IDE: NetBeans
+<br>
+<br> FECHA INICIACION: 9 de Mayo de 2012
+<br>
+<br> AUTORES:
+<br>     Marx Arturo Arias - 0840247-3743
+<br>     <a href="mailto:marxarturoariasescobar@gmail.com">marxarturoariasescobar@gmail.com</a>
+<br>
+<br>     Luis Jeferson Gallardo - 
+<br>     <a href="mailto:luisjhefeerson@gmail.com">luisjhefeerson@gmail.com</a>
+<br>
+<br>     Fidel Herney Palacios - 0832691-3743
+<br>     <a href="mailto:herney400@gmail.com">herney400@gmail.com</a>
+<br>
+<br>     James Andrés Payan - 0957150-2711
+<br>     <a href="mailto:jamespayan@gmail.com">jamespayan@gmail.com</a>
+<br>
+<br>     Gustavo Adolfo Rodriguez - 0932979-3743
+<br>     <a href="mailto:gustalibreros@gmail.com">gustalibreros@gmail.com</a>
+<br>
+<br> ESCUELA DE INGENIERIA DE SISTEMAS Y COMPUTACION
+<br> UNIVERSIDAD DEL VALLE
+</p>
       </section>
     </div>
     <footer>
